force-app/main/default/objects/InterviewEvent__c/InterviewEvent__c.object-meta.xml
<CustomObject>
    <label>Interview Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>