force-app/main/default/objects/InterviewEvent__c/fields/ExpectedEndDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>ExpectedEndDateAndTime__c</fullName>
    <label>Expected End Date And Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>