force-app/main/default/objects/InterviewEvent__c/fields/ExpectedStartDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>ExpectedStartDateAndTime__c</fullName>
    <label>Expected Start Date And Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>