force-app/main/default/objects/InterviewEvent__c/fields/Interview_Organizing_Committee__c.field-meta.xml
<CustomField>
    <fullName>Interview_Organizing_Committee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interview Organizing Committee</label>
    <referenceTo>InterviewOrganizingCommittee__c</referenceTo>
    <relationshipLabel>Interview Events</relationshipLabel>
    <relationshipName>Interview_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>