force-app/main/default/objects/InterviewEvent__c/fields/InterviewEventSetting__c.field-meta.xml
<CustomField>
    <fullName>InterviewEventSetting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to Setting instance</description>
    <label>InterviewEventSetting</label>
    <referenceTo>InterviewEventTemplate__c</referenceTo>
    <relationshipLabel>InterviewEvents</relationshipLabel>
    <relationshipName>InterviewEvents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>