force-app/main/default/objects/InterviewEvent__c/fields/InterviewEventTemplate__c.field-meta.xml
<CustomField>
    <fullName>InterviewEventTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to Setting instance</description>
    <label>Interview Event Template</label>
    <referenceTo>InterviewEventTemplate__c</referenceTo>
    <relationshipName>InterviewEvents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>