force-app/main/default/objects/InterviewEvent__c/fields/ParentInterviewEvent__c.field-meta.xml
<CustomField>
    <fullName>ParentInterviewEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Interview Event</description>
    <label>Parent Interview Event</label>
    <referenceTo>InterviewEvent__c</referenceTo>
    <relationshipLabel>Child Interview Events</relationshipLabel>
    <relationshipName>InterviewEvents</relationshipName>
    <type>Lookup</type>
</CustomField>